fixed li spacing in mobile

--- a/css/global.css
+++ b/css/global.css
@@ -191,6 +191,7 @@ footer li {
 	list-style-type: none;
 	line-height: var(--line-height32);
 	text-align: center;
+	margin-bottom: 20px;
 }
 footer ul {
 	padding-left: 0px;
